# server-client-network

./: .gitattributes  .gitignore  README.md
GroupChat/: CMakeLists.txt  README.md
GroupChat/include/: protocol.hpp
GroupChat/scripts/: test_local.sh
GroupChat/src/: client.cpp  server.cpp
